feat: Add light lock example.